Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/enum/AbstractEmptyEnum.out
AbstractEmptyEnum.java:10:8: compiler.err.does.not.override.abstract: AbstractEmptyEnum, m(), AbstractEmptyEnum
1 error
