Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/enum/AbstractEmptyEnum.java
/*
 * @test /nodynamiccopyright/
 * @bug 5009601
 * @summary empty enum cannot be abstract
 * @author Joseph D. Darcy
 *
 * @compile/fail/ref=AbstractEmptyEnum.out -XDrawDiagnostics  AbstractEmptyEnum.java
 */

public enum AbstractEmptyEnum {
    ;
    abstract void m();
}
